fix: change to snake-case on swagger examples
