# app/Http/Controllers/API/Products/GetProductsController.php
@@ -28,23 +28,23 @@ class GetProductsController extends Controller
      *                     @OA\Property(property="type", type="string", example="product"),
      *                     @OA\Property(property="attributes", type="object",
      *                         @OA\Property(property="id", type="integer", example=1),
-     *                         @OA\Property(property="productName", type="string", example="BANCOLOMBIA"),
-     *                         @OA\Property(property="productDescription", type="string", example="<p>DEPOSITO BANCOLOMBIA</p>"),
-     *                         @OA\Property(property="productLogo", type="string", example="https://example.com/storage/products/1.png"),
-     *                         @OA\Property(property="productCommission", type="integer", example=800),
-     *                         @OA\Property(property="producType", type="string", example="Deposit"),
-     *                         @OA\Property(property="clientName", type="integer", example=0),
-     *                         @OA\Property(property="clientDocument", type="integer", example=0),
-     *                         @OA\Property(property="phoneNumber", type="integer", example=0),
+     *                         @OA\Property(property="product_name", type="string", example="BANCOLOMBIA"),
+     *                         @OA\Property(property="product_description", type="string", example="<p>DEPOSITO BANCOLOMBIA</p>"),
+     *                         @OA\Property(property="product_logo", type="string", example="https://example.com/storage/products/1.png"),
+     *                         @OA\Property(property="product_commission", type="integer", example=800),
+     *                         @OA\Property(property="product_type", type="string", example="Deposit"),
+     *                         @OA\Property(property="client_name", type="integer", example=0),
+     *                         @OA\Property(property="client_document", type="integer", example=0),
+     *                         @OA\Property(property="phone_number", type="integer", example=0),
      *                         @OA\Property(property="email", type="integer", example=0),
-     *                         @OA\Property(property="accountType", type="integer", example=1),
-     *                         @OA\Property(property="accountNumber", type="integer", example=1),
+     *                         @OA\Property(property="account_type", type="integer", example=1),
+     *                         @OA\Property(property="account_number", type="integer", example=1),
      *                         @OA\Property(property="code", type="integer", example=0),
      *                         @OA\Property(property="extra", type="integer", example=0),
-     *                         @OA\Property(property="areDefaultFields", type="integer", example=1),
-     *                         @OA\Property(property="fieldNames", type="string", example="Número de seguro,Número de NIT,Número de registro civil"),
-     *                         @OA\Property(property="minAmount", type="integer", example=5000),
-     *                         @OA\Property(property="maxAmount", type="integer", example=300000),
+     *                         @OA\Property(property="are_default_fields", type="integer", example=1),
+     *                         @OA\Property(property="field_names", type="string", example="Número de seguro,Número de NIT,Número de registro civil"),
+     *                         @OA\Property(property="min_amount", type="integer", example=5000),
+     *                         @OA\Property(property="max_amount", type="integer", example=300000),
      *                         @OA\Property(property="category", type="string", example="bancos")
      *                     )
      *                 )
