# app/Http/Resources/ProductsResource.php
@@ -18,23 +18,23 @@ class ProductsResource extends JsonResource
             'type' => 'product',
             'attributes' => [
                 'id' => $this->id,
-                'productName' => $this->product_name,
-                'productDescription' => $this->product_description,
-                'productLogo' => getenv('APP_URL').$this->product_logo,
-                'productCommission' => $this->product_commission,
-                'productType' => $this->product_type,
-                'clientName' => $this->client_name,
-                'clientDocument' => $this->client_document,
-                'phoneNumber' => $this->phone_number,
+                'product_name' => $this->product_name,
+                'product_description' => $this->product_description,
+                'product_logo' => getenv('APP_URL').$this->product_logo,
+                'product_commission' => $this->product_commission,
+                'product_type' => $this->product_type,
+                'client_name' => $this->client_name,
+                'client_document' => $this->client_document,
+                'phone_number' => $this->phone_number,
                 'email' => $this->email,
-                'accountType' => $this->account_type,
-                'accountNumber' => $this->account_number,
+                'account_type' => $this->account_type,
+                'account_number' => $this->account_number,
                 'code' => $this->code,
                 'extra' => $this->extra,
-                'areDefaultFields' => $this->are_default_fields,
-                'fieldNames' => $this->field_names,
-                'minAmount' => $this->min_amount,
-                'maxAmount' => $this->max_amount,
+                'are_default_fields' => $this->are_default_fields,
+                'field_names' => $this->field_names,
+                'min_amount' => $this->min_amount,
+                'max_amount' => $this->max_amount,
                 'category' => $this->category
             ]
         ];
